--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -1,117 +1,144 @@
-'''Workflow for the CAMP binning module.'''
+'''Workflow for the CAMP short read taxonomy module.'''
 
 
 from contextlib import redirect_stderr
 import os
+from os import makedirs
 from os.path import basename, join
 import pandas as pd
-from utils import Workflow_Dirs, ingest_samples
+from utils import Workflow_Dirs, ingest_samples, estimate_read_length
 
 
 # Load and/or make the working directory structure
-dirs = Workflow_Dirs(config['work_dir'], short-read-taxonomy)
+dirs = Workflow_Dirs(config['work_dir'], "short-read-taxonomy")
 
 
 # Load sample names and input files 
 SAMPLES = ingest_samples(config['samples'], dirs.TMP)
-
-
+    
 # --- Workflow output --- #
 
 
 rule all:
     input:
-        join(dirs.OUT, 'final_reports', 'samples.csv') 
+        join(dirs.OUT, 'samples.csv')
 
 
 # --- Workflow steps --- #
 
+if config['mask']==True:
+    # create new sample names 
+    
+    rule mask_reads:
+        # Corresponds to map_sort from camp_binning
+        input:
+            fwd = join(dirs.TMP,'{sample}_1.fastq'),
+            rev = join(dirs.TMP,'{sample}_2.fastq')
+        output:
+            join(dirs.OUT,'kraken2','{sample}.kraken'),
+            join(dirs.OUT,'kraken2','{sample}.kreport')
+        log:
+            join(dirs.LOG, 'kraken2', '{sample}.out'),
+        params:
+            kthreads=config['kraken_threads'],
+            basename=join(dirs.OUT,'kraken2','{sample}'),
+        shell:
+            """
+            kraken2 --db /home/cem2009/ReferenceFiles/kraken2/databases/humanmicroorg --threads {params.kthreads} --report {params.basename}.kreport --output {params.basename}.kraken --paired {input.fwd} {input.rev}
+            """      
 
-rule sample_rule:
+rule run_kraken2:
     # Corresponds to map_sort from camp_binning
     input:
-        fwd = join(dirs.TMP, '{sample}_1.fastq'),
-        rev = join(dirs.TMP, '{sample}_2.fastq'),
-        ctg = join(dirs.TMP, '{sample}.fasta'),
+        fwd = join(dirs.TMP,'{sample}_1.fastq'),
+        rev = join(dirs.TMP,'{sample}_2.fastq')
     output:
-        join(dirs.OUT, '0_contig_coverage', '{sample}', 'coverage.bam'), 
-        join(dirs.OUT, '0_contig_coverage', '{sample}', 'coverage.bam.bai'),
+        join(dirs.OUT,'kraken2','{sample}.kraken'),
+        join(dirs.OUT,'kraken2','{sample}.kreport')
     log:
-        join(dirs.LOG, 'map_sort', '{sample}.out'),
-    threads: config['map_sort_threads'],
-    resources:
-        mem = lambda wildcards, attempt: \
-              int(config['map_sort_mem_mb']) + 10000 * attempt,
+        join(dirs.LOG, 'kraken2', '{sample}.out'),
     params:
-        out_dir = join(dirs.OUT, '0_contig_coverage', '{sample}'),
+        kthreads=config['kraken_threads'],
+        basename=join(dirs.OUT,'kraken2','{sample}'),
     shell:
         """
-        CTG_PREFIX=$(basename {input.ctg} .fasta)
-        mkdir -p {params.out_dir}
-        bowtie2-build {input.ctg} {params.out_dir}/$CTG_PREFIX > {log} 2>&1
-        bowtie2 -x {params.out_dir}/$CTG_PREFIX -p {threads} \
-            -1 {input.fwd} -2 {input.rev} | \
-            samtools view -@ {threads} -uS - | \
-            samtools sort -@ {threads} - \
-            -o {params.out_dir}/coverage.bam > {log} 2>&1
-        samtools index -@ {threads} {params.out_dir}/coverage.bam > {log} 2>&1
-        """
+        kraken2 --db /home/cem2009/ReferenceFiles/kraken2/databases/humanmicroorg --threads {params.kthreads} --report {params.basename}.kreport --output {params.basename}.kraken --paired {input.fwd} {input.rev}
+        """    
 
-
-rule first_rule:
+rule run_bracken:
+    # Corresponds to map_sort from camp_binning
     input:
-        # Symlinked input files,
+        kreport = join(dirs.OUT,'kraken2','{sample}.kreport')
     output:
-        # Output files/directories,
-    conda:
-        # /path/to/camp_module/configs/conda/new_env.yaml,
+        join(dirs.OUT,'bracken','{sample}.species.bracken'),
+        join(dirs.OUT,'bracken','{sample}.genus.bracken'),
+        join(dirs.OUT,'bracken','{sample}.family.bracken'),
+        join(dirs.OUT,'bracken','{sample}.order.bracken'),
+        join(dirs.OUT,'bracken','{sample}.class.bracken'),
+        join(dirs.OUT,'bracken','{sample}.phylum.bracken'),
     log:
-        # Log in appropriate subdirectory,
-    threads: # Format: config[rule_name_threads],
-    resources:
-        mem = # Format: config[rule_name_mem], 
+        join(dirs.LOG, 'bracken', '{sample}.out'),
     params:
-        some_constant = config['some_constant'],
-        other_constant = config['other_constant'],
-        # I usually put the output directory here,
+        basename=join(dirs.OUT,'bracken','{sample}'),
+        bracken_readlength=config['bracken_readlength']
     shell:
-        """
-        mkdir -p {params.out_dir}
-        ./command_line.sh > {log} 2>&1
-        """
-
-
-rule python_rule:
-    input:
-        # Intermediate input files,
-    output:
-        # Output files/directories,
-    log:
-        # Log in appropriate subdirectory,
-    threads: # Format: config[rule_name_threads],
-    resources:
-        mem = # Format: config[rule_name_mem], 
-    params:
-        some_constant = config['some_constant'],
-        # I usually put the output directory here,
-    run:
-        with open(log[0], 'w') as l:
-            with redirect_stderr(l): # Can be toggled with redirect_stdout depending on the needs of the commands
-                print('Now writing to {}'.format(log))
-                some_python_function()
-
+            """
+            echo {params.basename}
+            bracken -r {params.bracken_readlength} -d /home/cem2009/ReferenceFiles/kraken2/databases/humanmicroorg -l S -i {input.kreport} -o {params.basename}.species.bracken
+            bracken -r {params.bracken_readlength} -d /home/cem2009/ReferenceFiles/kraken2/databases/humanmicroorg -l G -i {input.kreport} -o {params.basename}.genus.bracken
+            bracken -r {params.bracken_readlength} -d /home/cem2009/ReferenceFiles/kraken2/databases/humanmicroorg -l F -i {input.kreport} -o {params.basename}.family.bracken
+            bracken -r {params.bracken_readlength} -d /home/cem2009/ReferenceFiles/kraken2/databases/humanmicroorg -l O -i {input.kreport} -o {params.basename}.order.bracken
+            bracken -r {params.bracken_readlength} -d /home/cem2009/ReferenceFiles/kraken2/databases/humanmicroorg -l C -i {input.kreport} -o {params.basename}.class.bracken
+            bracken -r {params.bracken_readlength} -d /home/cem2009/ReferenceFiles/kraken2/databases/humanmicroorg -l P -i {input.kreport} -o {params.basename}.phylum.bracken
+            """
 
 rule make_config:
     input:
-        # Intermediate input files,
+        expand(join(dirs.OUT,'bracken','{sample}.species.bracken'), sample = SAMPLES)
     output:
-        join(dirs.OUT, 'final_reports', 'samples.csv'),
+        join(dirs.OUT, 'samples.csv')
     run:
-        # Collate workflow outputs and i) summarize them in a new samples.csv for downstream analysis and/or ii) copy them to 'final_reports' for external data analysis
-        df = pd.DataFrame.from_dict(dct, orient ='index')
-        df.reset_index(inplace = True)
-        df.rename(columns = {'index': 'sample_name'}, inplace = True)
+        out = []
+        for i in input:
+            out.append([i.split('/')[-1].split('.species.bracken')[0],i.replace('.species.bracken','.kraken'),i.replace('.species.bracken','.kreport'),i,i.replace('.species.bracken','.genus.bracken'),i.replace('.species.bracken','.family.bracken'),i.replace('.species.bracken','.order.bracken'),i.replace('.species.bracken','.class.bracken'),i.replace('.species.bracken','.phylum.bracken')])
+            df = pd.DataFrame(out)
+            df.columns = ['sample_ID','kraken2_output','kraken2_report','species.bracken','genus.bracken','family.bracken','order.bracken','class.bracken','phylum.bracken']
         df.to_csv(str(output), index = False)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
