--- a/configs/conda/short-read-taxonomy.yaml
+++ b/configs/conda/short-read-taxonomy.yaml
@@ -1,182 +1,126 @@
-name: short-read-taxonomy
+name: camptax
 channels:
-  - conda-forge
   - bioconda
+  - conda-forge
   - defaults
+  - r
+  - ursky
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
-  - abseil-cpp=20211102.0=h27087fc_1
-  - aioeasywebdav=2.4.0=pyha770c72_0
-  - aiohttp=3.8.1=py310h5764c6d_1
-  - aiosignal=1.2.0=pyhd8ed1ab_0
-  - amply=0.1.5=pyhd8ed1ab_0
-  - appdirs=1.4.4=pyh9f0ad1d_0
-  - arrow=1.2.2=pyhd8ed1ab_0
-  - async-timeout=4.0.2=pyhd8ed1ab_0
-  - attmap=0.13.2=pyhd8ed1ab_0
-  - attrs=21.4.0=pyhd8ed1ab_0
-  - backports=1.0=py_2
-  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
-  - bcrypt=3.2.2=py310h5764c6d_0
-  - binaryornot=0.4.4=py_1
-  - boto3=1.24.23=pyhd8ed1ab_0
-  - botocore=1.27.23=pyhd8ed1ab_0
-  - brotlipy=0.7.0=py310h5764c6d_1004
-  - bump2version=1.0.1=pyh9f0ad1d_0
+  - blast=2.9.0=h20b68b9_1
+  - boost=1.68.0=py37h8619c78_1001
+  - boost-cpp=1.68.0=h11c811c_1000
+  - bracken=2.7=py37h96cfd12_0
   - bzip2=1.0.8=h7f98852_4
-  - c-ares=1.18.1=h7f98852_0
   - ca-certificates=2022.6.15=ha878542_0
-  - cachetools=5.0.0=pyhd8ed1ab_0
-  - certifi=2022.6.15=py310hff52083_0
-  - cffi=1.15.1=py310h255011f_0
-  - chardet=5.0.0=py310hff52083_0
-  - charset-normalizer=2.1.0=pyhd8ed1ab_0
-  - click=8.1.3=py310hff52083_0
-  - coincbc=2.10.5=hcee13e7_1
-  - configargparse=1.5.3=pyhd8ed1ab_0
-  - connection_pool=0.0.3=pyhd3deb0d_0
-  - cookiecutter=2.1.1=pyh6c4a22f_0
-  - cryptography=37.0.2=py310h597c629_0
-  - datrie=0.8.2=py310h6acc77f_3
-  - decorator=5.1.1=pyhd8ed1ab_0
-  - defusedxml=0.7.1=pyhd8ed1ab_0
-  - docutils=0.19=py310hff52083_0
-  - dpath=2.0.6=py310hff52083_1
-  - dropbox=11.32.0=pyhd8ed1ab_0
-  - filechunkio=1.8=py_2
-  - filelock=3.7.1=pyhd8ed1ab_0
-  - frozenlist=1.3.0=py310h5764c6d_1
-  - ftputil=5.0.4=pyhd8ed1ab_0
-  - gitdb=4.0.9=pyhd8ed1ab_0
-  - gitpython=3.1.27=pyhd8ed1ab_0
-  - google-api-core=2.8.2=pyhd8ed1ab_0
-  - google-api-python-client=2.52.0=pyhd8ed1ab_0
-  - google-auth=2.9.0=pyh6c4a22f_0
-  - google-auth-httplib2=0.1.0=pyhd8ed1ab_1
-  - google-cloud-core=2.3.1=pyhd8ed1ab_0
-  - google-cloud-storage=2.4.0=pyh6c4a22f_0
-  - google-crc32c=1.1.2=py310he8fe98e_3
-  - google-resumable-media=2.3.3=pyhd8ed1ab_0
-  - googleapis-common-protos=1.56.3=py310hff52083_0
-  - grpc-cpp=1.47.0=hbd84cd8_1
-  - grpcio=1.47.0=py310ha0b7d45_1
-  - htslib=1.15.1=h9753748_0
-  - httplib2=0.20.4=pyhd8ed1ab_0
-  - idna=3.3=pyhd8ed1ab_0
-  - importlib-metadata=4.11.4=py310hff52083_0
-  - importlib_resources=5.8.0=pyhd8ed1ab_0
-  - iniconfig=1.1.1=pyh9f0ad1d_0
-  - jinja2=3.1.2=pyhd8ed1ab_1
-  - jinja2-time=0.2.0=pyhd8ed1ab_3
-  - jmespath=1.0.1=pyhd8ed1ab_0
-  - jsonschema=4.6.1=pyhd8ed1ab_0
-  - jupyter_core=4.10.0=py310hff52083_0
-  - keyutils=1.6.1=h166bdaf_0
-  - krb5=1.19.3=h3790be6_0
+  - gettext=0.19.8.1=h73d1719_1008
+  - gmp=6.2.1=h58526e2_0
+  - gnutls=3.6.13=h79a8f9a_0
+  - icu=58.2=hf484d3e_1000
+  - kraken2=2.1.2=pl5321h9f5acd7_2
   - ld_impl_linux-64=2.36.1=hea4e1c9_2
   - libblas=3.9.0=15_linux64_openblas
   - libcblas=3.9.0=15_linux64_openblas
-  - libcrc32c=1.1.2=h9c3ff4c_0
-  - libcurl=7.83.1=h7bff187_0
-  - libdeflate=1.10=h7f98852_0
-  - libedit=3.1.20191231=he28a2e2_2
-  - libev=4.33=h516909a_1
   - libffi=3.4.2=h7f98852_5
   - libgcc-ng=12.1.0=h8d9b700_16
   - libgfortran-ng=12.1.0=h69a702a_16
   - libgfortran5=12.1.0=hdcd56e2_16
   - libgomp=12.1.0=h8d9b700_16
+  - libiconv=1.16=h516909a_0
+  - libidn2=2.3.3=h166bdaf_0
   - liblapack=3.9.0=15_linux64_openblas
-  - libnghttp2=1.47.0=h727a467_0
   - libnsl=2.0.0=h7f98852_0
   - libopenblas=0.3.20=pthreads_h78a6416_0
-  - libprotobuf=3.20.1=h6239696_0
-  - libsodium=1.0.18=h36c2ea0_1
-  - libssh2=1.10.0=ha56f1ee_2
   - libstdcxx-ng=12.1.0=ha89aaad_16
-  - libuuid=2.32.1=h7f98852_1000
-  - libzlib=1.2.12=h166bdaf_1
-  - logmuse=0.2.6=pyh8c360ce_0
-  - markupsafe=2.1.1=py310h5764c6d_1
-  - multidict=6.0.2=py310h5764c6d_1
-  - nbformat=5.4.0=pyhd8ed1ab_0
+  - libunistring=0.9.10=h7f98852_0
+  - libzlib=1.2.12=h166bdaf_2
   - ncurses=6.3=h27087fc_1
-  - numpy=1.23.0=py310h53a5b5f_0
-  - oauth2client=4.1.3=py_0
-  - openssl=1.1.1q=h166bdaf_0
-  - packaging=21.3=pyhd8ed1ab_0
-  - pandas=1.4.3=py310h769672d_0
-  - paramiko=2.11.0=pyhd8ed1ab_0
-  - peppy=0.31.2=pyhd8ed1ab_2
+  - nettle=3.4.1=h1bed415_1002
+  - numpy=1.21.6=py37h976b520_0
+  - openssl=3.0.5=h166bdaf_0
+  - pcre=8.45=h9c3ff4c_0
+  - perl=5.32.1=2_h7f98852_perl5
+  - perl-archive-tar=2.40=pl5321hdfd78af_0
+  - perl-carp=1.38=pl5321hdfd78af_4
+  - perl-common-sense=3.75=pl5321hdfd78af_0
+  - perl-compress-raw-bzip2=2.201=pl5321h87f3376_0
+  - perl-compress-raw-zlib=2.105=pl5321h87f3376_0
+  - perl-encode=3.18=pl5321hec16e2b_0
+  - perl-exporter=5.72=pl5321hdfd78af_2
+  - perl-exporter-tiny=1.002002=pl5321hdfd78af_0
+  - perl-extutils-makemaker=6.66=0
+  - perl-io-compress=2.106=pl5321h87f3376_0
+  - perl-io-zlib=1.11=pl5321hdfd78af_0
+  - perl-json=4.07=pl5321hdfd78af_0
+  - perl-json-xs=2.34=pl5321h9f5acd7_5
+  - perl-list-moreutils=0.430=pl5321hdfd78af_0
+  - perl-list-moreutils-xs=0.430=pl5321hec16e2b_1
+  - perl-parent=0.236=pl5321hdfd78af_2
+  - perl-pathtools=3.75=pl5321hec16e2b_3
+  - perl-scalar-list-utils=1.62=pl5321hec16e2b_0
+  - perl-threaded=5.32.1=hdfd78af_1
+  - perl-types-serialiser=1.01=pl5321hdfd78af_0
   - pip=22.1.2=pyhd8ed1ab_0
-  - plac=1.3.5=pyhd8ed1ab_0
-  - pluggy=1.0.0=py310hff52083_3
-  - ply=3.11=py_1
-  - prettytable=3.3.0=pyhd8ed1ab_0
-  - protobuf=3.20.1=py310hd8f1fbe_0
-  - psutil=5.9.1=py310h5764c6d_0
-  - pulp=2.6.0=py310hff52083_1
-  - py=1.11.0=pyh6c4a22f_0
-  - pyasn1=0.4.8=py_0
-  - pyasn1-modules=0.2.7=py_0
-  - pycparser=2.21=pyhd8ed1ab_0
-  - pygments=2.12.0=pyhd8ed1ab_0
-  - pynacl=1.5.0=py310h5764c6d_1
-  - pyopenssl=22.0.0=pyhd8ed1ab_0
-  - pyparsing=3.0.9=pyhd8ed1ab_0
-  - pyrsistent=0.18.1=py310h5764c6d_1
-  - pysftp=0.2.9=py_1
-  - pysocks=1.7.1=py310hff52083_5
-  - pytest=7.1.2=py310hff52083_0
-  - python=3.10.5=h582c2e5_0_cpython
-  - python-dateutil=2.8.2=pyhd8ed1ab_0
-  - python-fastjsonschema=2.15.3=pyhd8ed1ab_0
-  - python-irodsclient=1.1.4=pyhd8ed1ab_0
-  - python-slugify=6.1.2=pyhd8ed1ab_0
-  - python_abi=3.10=2_cp310
-  - pytz=2022.1=pyhd8ed1ab_0
-  - pyu2f=0.1.5=pyhd8ed1ab_0
-  - pyyaml=6.0=py310h5764c6d_4
-  - ratelimiter=1.2.0=py_1002
-  - re2=2022.06.01=h27087fc_0
+  - popt=1.16=1
+  - python=3.7.12=hf930737_100_cpython
+  - python_abi=3.7=2_cp37m
   - readline=8.1.2=h0f457ee_0
-  - requests=2.28.1=pyhd8ed1ab_0
-  - retry=0.9.2=py_0
-  - rsa=4.8=pyhd8ed1ab_0
-  - s3transfer=0.6.0=pyhd8ed1ab_0
-  - samtools=1.15.1=h1170115_0
-  - setuptools=63.1.0=py310hff52083_0
-  - setuptools-scm=7.0.4=pyhd8ed1ab_0
-  - six=1.16.0=pyh6c4a22f_0
-  - slacker=0.14.0=py_0
-  - smart_open=6.0.0=pyhd8ed1ab_0
-  - smmap=3.0.5=pyh44b312d_0
-  - snakemake=7.8.5=hdfd78af_0
-  - snakemake-minimal=7.8.5=pyhdfd78af_0
+  - rsync=3.1.3=h1245774_1003
+  - setuptools=63.1.0=py37h89c1867_0
   - sqlite=3.39.0=h4ff8645_0
-  - stone=3.3.1=pyhd8ed1ab_0
-  - stopit=1.1.2=py_0
-  - tabulate=0.8.10=pyhd8ed1ab_0
-  - text-unidecode=1.3=py_0
+  - tar=1.34=ha1f6473_0
   - tk=8.6.12=h27826a3_0
-  - tomli=2.0.1=pyhd8ed1ab_0
-  - toposort=1.7=pyhd8ed1ab_0
-  - traitlets=5.3.0=pyhd8ed1ab_0
-  - typing-extensions=4.3.0=hd8ed1ab_0
-  - typing_extensions=4.3.0=pyha770c72_0
-  - tzdata=2022a=h191b570_0
-  - ubiquerg=0.6.1=pyh9f0ad1d_0
-  - unidecode=1.3.4=pyhd8ed1ab_0
-  - uritemplate=4.1.1=pyhd8ed1ab_0
-  - urllib3=1.26.9=pyhd8ed1ab_0
-  - veracitools=0.1.3=py_0
-  - wcwidth=0.2.5=pyh9f0ad1d_2
+  - wget=1.20.3=ha35d2d1_1
   - wheel=0.37.1=pyhd8ed1ab_0
-  - wrapt=1.14.1=py310h5764c6d_0
   - xz=5.2.5=h516909a_1
-  - yaml=0.2.5=h7f98852_2
-  - yarl=1.7.2=py310h5764c6d_2
-  - yte=1.5.1=py310hff52083_0
-  - zipp=3.8.0=pyhd8ed1ab_0
-  - zlib=1.2.12=h166bdaf_1
+  - zlib=1.2.12=h166bdaf_2
+  - pip:
+    - appdirs==1.4.4
+    - attrs==21.4.0
+    - certifi==2022.6.15
+    - charset-normalizer==2.1.0
+    - click==8.1.3
+    - configargparse==1.5.3
+    - connection-pool==0.0.3
+    - datrie==0.8.2
+    - decorator==5.1.1
+    - docutils==0.19
+    - dpath==2.0.6
+    - fastjsonschema==2.15.3
+    - gitdb==4.0.9
+    - gitpython==3.1.27
+    - idna==3.3
+    - importlib-metadata==4.12.0
+    - importlib-resources==5.8.0
+    - jinja2==3.1.2
+    - jsonschema==4.7.2
+    - jupyter-core==4.11.1
+    - markupsafe==2.1.1
+    - nbformat==5.4.0
+    - pandas==1.3.5
+    - plac==1.3.5
+    - psutil==5.9.1
+    - pulp==2.6.0
+    - py==1.11.0
+    - pyrsistent==0.18.1
+    - python-dateutil==2.8.2
+    - pytz==2022.1
+    - pyyaml==6.0
+    - ratelimiter==1.2.0.post0
+    - requests==2.28.1
+    - retry==0.9.2
+    - six==1.16.0
+    - smart-open==6.0.0
+    - smmap==5.0.0
+    - snakemake==7.8.5
+    - stopit==1.1.2
+    - tabulate==0.8.10
+    - toposort==1.7
+    - traitlets==5.3.0
+    - typing-extensions==4.3.0
+    - urllib3==1.26.10
+    - wrapt==1.14.1
+    - yte==1.5.1
+    - zipp==3.8.1
+prefix: /home/btt4001/miniconda3/envs/camptax
