--- a/configs/conda/short-read-taxonomy.yaml
+++ b/configs/conda/short-read-taxonomy.yaml
@@ -1,27 +1,77 @@
 name: camptax
 channels:
-  - bioconda
+  - agbiome
+  - biobakery
   - conda-forge
+  - bioconda
   - defaults
   - r
   - ursky
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
+  - bbtools=37.62=0
+  - bcbio-gff=0.6.9=pyh5e36f6f_0
+  - biom-format=2.1.12=py37hda87dfa_1
+  - biopython=1.79=py37h540881e_2
   - blast=2.9.0=h20b68b9_1
   - boost=1.68.0=py37h8619c78_1001
   - boost-cpp=1.68.0=h11c811c_1000
+  - bowtie2=2.4.5=py37h1840d8f_2
   - bracken=2.7=py37h96cfd12_0
+  - brotli=1.0.9=h166bdaf_7
+  - brotli-bin=1.0.9=h166bdaf_7
+  - brotlipy=0.7.0=py37h540881e_1004
+  - bx-python=0.8.13=py37hfa8f21c_1
   - bzip2=1.0.8=h7f98852_4
+  - c-ares=1.18.1=h7f98852_0
   - ca-certificates=2022.6.15=ha878542_0
+  - cached-property=1.5.2=hd8ed1ab_1
+  - cached_property=1.5.2=pyha770c72_1
+  - capnproto=0.9.1=h780b84a_5
+  - cffi=1.15.1=py37h43b0acd_0
+  - charset-normalizer=2.1.0=pyhd8ed1ab_0
+  - click=8.1.3=py37h89c1867_0
+  - cmseq=1.0.4=pyhb7b1952_0
+  - cryptography=37.0.4=py37h38fbfac_0
+  - cycler=0.11.0=pyhd8ed1ab_0
+  - dendropy=4.5.2=pyh3252c3a_0
+  - diamond=0.9.24=ha888412_1
+  - fasttree=2.1.11=hec16e2b_1
+  - fonttools=4.34.4=py37h540881e_0
+  - freetype=2.10.4=h0708190_1
+  - future=0.18.2=py37h89c1867_5
   - gettext=0.19.8.1=h73d1719_1008
+  - giflib=5.2.1=h36c2ea0_2
+  - glpk=5.0=h445213a_0
   - gmp=6.2.1=h58526e2_0
   - gnutls=3.6.13=h79a8f9a_0
+  - gsl=2.7=he838d99_0
+  - h5py=3.7.0=nompi_py37hc97082c_100
+  - hdf5=1.12.1=nompi_h2386368_104
+  - htslib=1.15.1=h9753748_0
+  - humann=3.0.1=py_0
   - icu=58.2=hf484d3e_1000
+  - idna=3.3=pyhd8ed1ab_0
+  - iqtree=2.2.0.3=hb97b32f_0
+  - java-jdk=8.0.112=1
+  - jpeg=9e=h166bdaf_2
+  - keyutils=1.6.1=h166bdaf_0
+  - kiwisolver=1.4.3=py37h7cecad7_0
   - kraken2=2.1.2=pl5321h9f5acd7_2
+  - krb5=1.19.3=h3790be6_0
+  - lcms2=2.12=hddcbb42_0
   - ld_impl_linux-64=2.36.1=hea4e1c9_2
+  - lerc=3.0=h9c3ff4c_0
   - libblas=3.9.0=15_linux64_openblas
+  - libbrotlicommon=1.0.9=h166bdaf_7
+  - libbrotlidec=1.0.9=h166bdaf_7
+  - libbrotlienc=1.0.9=h166bdaf_7
   - libcblas=3.9.0=15_linux64_openblas
+  - libcurl=7.83.1=h7bff187_0
+  - libdeflate=1.10=h7f98852_0
+  - libedit=3.1.20191231=he28a2e2_2
+  - libev=4.33=h516909a_1
   - libffi=3.4.2=h7f98852_5
   - libgcc-ng=12.1.0=h8d9b700_16
   - libgfortran-ng=12.1.0=h69a702a_16
@@ -30,15 +80,34 @@ dependencies:
   - libiconv=1.16=h516909a_0
   - libidn2=2.3.3=h166bdaf_0
   - liblapack=3.9.0=15_linux64_openblas
+  - libnghttp2=1.47.0=h727a467_0
   - libnsl=2.0.0=h7f98852_0
   - libopenblas=0.3.20=pthreads_h78a6416_0
+  - libpng=1.6.37=h753d276_3
+  - libssh2=1.10.0=ha56f1ee_2
   - libstdcxx-ng=12.1.0=ha89aaad_16
+  - libtiff=4.4.0=h0fcbabc_0
   - libunistring=0.9.10=h7f98852_0
+  - libwebp=1.2.2=h3452ae3_0
+  - libwebp-base=1.2.2=h7f98852_1
+  - libxcb=1.13=h7f98852_1004
   - libzlib=1.2.12=h166bdaf_2
+  - lz4-c=1.9.3=h9c3ff4c_1
+  - lzo=2.10=h516909a_1000
+  - mafft=7.505=hec16e2b_0
+  - mash=2.3=ha9a2dd8_3
+  - matplotlib-base=3.5.2=py37hc347a89_0
+  - metaphlan=3.0.14=pyhb7b1952_0
+  - munkres=1.1.4=pyh9f0ad1d_0
+  - muscle=5.1=h9f5acd7_1
   - ncurses=6.3=h27087fc_1
   - nettle=3.4.1=h1bed415_1002
   - numpy=1.21.6=py37h976b520_0
-  - openssl=3.0.5=h166bdaf_0
+  - openjdk=8.0.112=zulu8.19.0.1_3
+  - openjpeg=2.4.0=hb52868f_1
+  - openssl=1.1.1q=h166bdaf_0
+  - packaging=21.3=pyhd8ed1ab_0
+  - patsy=0.5.2=pyhd8ed1ab_0
   - pcre=8.45=h9c3ff4c_0
   - perl=5.32.1=2_h7f98852_perl5
   - perl-archive-tar=2.40=pl5321hdfd78af_0
@@ -61,26 +130,52 @@ dependencies:
   - perl-scalar-list-utils=1.62=pl5321hec16e2b_0
   - perl-threaded=5.32.1=hdfd78af_1
   - perl-types-serialiser=1.01=pl5321hdfd78af_0
+  - phylophlan=3.0.2=py_0
+  - pillow=9.2.0=py37h44f0d7a_0
   - pip=22.1.2=pyhd8ed1ab_0
   - popt=1.16=1
-  - python=3.7.12=hf930737_100_cpython
+  - pthread-stubs=0.4=h36c2ea0_1001
+  - pycparser=2.21=pyhd8ed1ab_0
+  - pyopenssl=22.0.0=pyhd8ed1ab_0
+  - pyparsing=3.0.9=pyhd8ed1ab_0
+  - pysam=0.19.1=py37h8fe4cdf_0
+  - pysocks=1.7.1=py37h89c1867_5
+  - python=3.7.12=hb7a2778_100_cpython
+  - python-dateutil=2.8.2=pyhd8ed1ab_0
+  - python-lzo=1.14=py37hd06c622_1
   - python_abi=3.7=2_cp37m
+  - pytz=2022.1=pyhd8ed1ab_0
+  - raxml=8.2.12=hec16e2b_4
   - readline=8.1.2=h0f457ee_0
+  - requests=2.28.1=pyhd8ed1ab_0
   - rsync=3.1.3=h1245774_1003
-  - setuptools=63.1.0=py37h89c1867_0
+  - samtools=1.15.1=h1170115_0
+  - scipy=1.7.3=py37hf2a6cf1_0
+  - seaborn=0.11.2=hd8ed1ab_0
+  - seaborn-base=0.11.2=pyhd8ed1ab_0
+  - setuptools=59.8.0=py37h89c1867_1
+  - six=1.16.0=pyh6c4a22f_0
   - sqlite=3.39.0=h4ff8645_0
+  - statsmodels=0.13.2=py37hda87dfa_0
   - tar=1.34=ha1f6473_0
+  - tbb=2020.2=h4bd325d_4
   - tk=8.6.12=h27826a3_0
-  - wget=1.20.3=ha35d2d1_1
+  - trimal=1.4.1=h9f5acd7_6
+  - typing-extensions=4.3.0=hd8ed1ab_0
+  - typing_extensions=4.3.0=pyha770c72_0
+  - unicodedata2=14.0.0=py37h540881e_1
+  - urllib3=1.26.10=pyhd8ed1ab_0
+  - wget=1.20.3=ha56f1ee_1
   - wheel=0.37.1=pyhd8ed1ab_0
+  - xorg-libxau=1.0.9=h7f98852_0
+  - xorg-libxdmcp=1.1.3=h7f98852_0
   - xz=5.2.5=h516909a_1
   - zlib=1.2.12=h166bdaf_2
+  - zstd=1.5.2=h8a70e8d_2
   - pip:
     - appdirs==1.4.4
     - attrs==21.4.0
     - certifi==2022.6.15
-    - charset-normalizer==2.1.0
-    - click==8.1.3
     - configargparse==1.5.3
     - connection-pool==0.0.3
     - datrie==0.8.2
@@ -90,7 +185,6 @@ dependencies:
     - fastjsonschema==2.15.3
     - gitdb==4.0.9
     - gitpython==3.1.27
-    - idna==3.3
     - importlib-metadata==4.12.0
     - importlib-resources==5.8.0
     - jinja2==3.1.2
@@ -104,13 +198,9 @@ dependencies:
     - pulp==2.6.0
     - py==1.11.0
     - pyrsistent==0.18.1
-    - python-dateutil==2.8.2
-    - pytz==2022.1
     - pyyaml==6.0
     - ratelimiter==1.2.0.post0
-    - requests==2.28.1
     - retry==0.9.2
-    - six==1.16.0
     - smart-open==6.0.0
     - smmap==5.0.0
     - snakemake==7.8.5
@@ -118,8 +208,6 @@ dependencies:
     - tabulate==0.8.10
     - toposort==1.7
     - traitlets==5.3.0
-    - typing-extensions==4.3.0
-    - urllib3==1.26.10
     - wrapt==1.14.1
     - yte==1.5.1
     - zipp==3.8.1
