--- a/configs/parameters.yaml
+++ b/configs/parameters.yaml
@@ -5,8 +5,8 @@
 
 ext: "~/bin/camp_short-read-taxonomy/workflow/ext"
 mask: False 
-metaphlan: True 
-kraken2: False 
+metaphlan: False 
+kraken2: True 
 # xtree kingdom options: bacterial_archaeal, viral, protozoa_fungi
 # Separate options on one line with commas (ex. viral,protozoa_fungi)
 xtree: 
