Databases and unit test removal
Added minimum relative abundance setting for all algorithms
Pytest: Not working correctly, so removed. Instructions to check installation updated accordingly. 
README: Included instructions to 1) download databases and 2) update parameters in the test data directory. 
Conda: Got rid of prefixes. 
Former-commit-id: f4c3feb9e17cb4bccb8df4c492ce0f56561585a3

--- a/configs/parameters.yaml
+++ b/configs/parameters.yaml
@@ -5,11 +5,12 @@
 
 ext: ''
 mask: False 
-metaphlan: False 
+metaphlan: True 
 kraken2: True 
 # xtree kingdom options: bacterial_archaeal, viral, protozoa_fungi
 # Separate options on one line with commas (ex. viral,protozoa_fungi)
 xtree: 'bacterial_archaeal,protozoa_fungi,viral'
+min_rel_abund: 0.01
 
 
 # --- metaphlan --- #
@@ -21,7 +22,7 @@ metaphlan_database: ''
 
 kraken_bracken_database: ''
 kraken2_executable: ''
-read_len: 150
+read_len: 100
 
 
 # --- xtree --- #
@@ -31,6 +32,6 @@ viral_database: ''
 protozoa_fungi_database: ''
 xtree_executable: ''
 ncbi_tax_names: ''
-thresh: 0.02
-hthresh : 0.05
-uthresh : 0.01
+# Original defaults: 0.02 (thresh = min_rel_abund), 0.05, 0.01
+hthresh : 0.005
+uthresh : 0.001
