--- a/test_data/parameters.yaml
+++ b/test_data/parameters.yaml
@@ -3,34 +3,35 @@
 
 # --- general --- #
 
-ext: '/home/lam4003/bin/camp_short-read-taxonomy/workflow/ext'
+ext: ''
 mask: False 
 metaphlan: True 
 kraken2: True 
 # xtree kingdom options: bacterial_archaeal, viral, protozoa_fungi
 # Separate options on one line with commas (ex. viral,protozoa_fungi)
 xtree: 'bacterial_archaeal,protozoa_fungi,viral'
+min_rel_abund: 0
 
 
 # --- metaphlan --- #
 
-metaphlan_database: '/athena/masonlab/scratch/databases/metagenomics/metaphlan_20220926'
+metaphlan_database: ''
 
 
 # --- kraken2/bracken --- #
 
-kraken_bracken_database: '/athena/masonlab/scratch/databases/metagenomics/Kraken2'
-kraken2_executable: '/home/lam4003/bin/kraken2/kraken2'
-read_len: 150
+kraken_bracken_database: ''
+kraken2_executable: ''
+read_len: 100
 
 
 # --- xtree --- #
 
-bacterial_archaeal_database: '/athena/masonlab/scratch/users/btt4001/databases/xtree_db/xtree_db_gtdb207_kmer29_comp2_20220722/GTDB207_filt.xtr'
-viral_database: '/athena/masonlab/scratch/users/btt4001/databases/xtree_db/xtree_db_genbankviralcomplete_99percclust_k17_comp0_20220726/genbankviralcomplete_99percclust_k17_comp0_20220726.xtr'
-protozoa_fungi_database: '/athena/masonlab/scratch/users/btt4001/databases/xtree_db/xtree_db_genbank_fungi_protozoa_complete_20220726/genbank_fungi_protozoa_complete_20220726.xtr'
-xtree_executable: '/home/lam4003/bin/UTree/xtree'
-ncbi_tax_names: '/athena/masonlab/scratch/databases/metagenomics/ncbi_taxonomy_20220426/names.dmp'
-thresh: 0
+bacterial_archaeal_database: ''
+viral_database: ''
+protozoa_fungi_database: ''
+xtree_executable: ''
+ncbi_tax_names: ''
+# Original defaults: 0.02 (thresh = min_rel_abund), 0.05, 0.01
 hthresh : 0
 uthresh : 0
