--- a/configs/conda/short-read-taxonomy.yaml
+++ b/configs/conda/short-read-taxonomy.yaml
@@ -1,4 +1,4 @@
-name: camptax
+name: short-read-taxonomy
 channels:
   - agbiome
   - biobakery
@@ -118,7 +118,7 @@ dependencies:
   - perl-encode=3.18=pl5321hec16e2b_0
   - perl-exporter=5.72=pl5321hdfd78af_2
   - perl-exporter-tiny=1.002002=pl5321hdfd78af_0
-  - perl-extutils-makemaker=6.66=0
+  - perl-extutils-makemaker
   - perl-io-compress=2.106=pl5321h87f3376_0
   - perl-io-zlib=1.11=pl5321hdfd78af_0
   - perl-json=4.07=pl5321hdfd78af_0
