--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -110,6 +110,7 @@ rule metaphlan:
 		database = config['metaphlan_database'],
 	shell:
 		"""
+		rm -r {params.out_dir}
 		mkdir -p {params.out_dir}
 		metaphlan --nproc {threads} --bowtie2db {params.database} --input_type fastq --force  -o {output} --bowtie2out {params.prefix}.bowtie2.bz2 $(echo {input} | sed 's/ /,/g') > {log} 2>&1
 		""" 
@@ -148,6 +149,7 @@ rule kraken2:
 		kraken_exec = config['kraken2_executable'],
 	shell:
 		"""
+		rm -r {params.out_dir}
 		mkdir -p {params.out_dir}
 		{params.kraken_exec} --db {params.database} --threads {threads} --report {output.kreport} --output {output.kraken} --paired {input} > {log} 2>&1
 		"""	
